PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/FunctionDefinedMultipleTimes.pf
module FunctionDefinedMultipleTimes {

    fun getInt() : Int {
        return 1
    }

    fun getInt() : Int {
            return 2
    }

    fun testSomething() : Int {
        i Int = getInt()
         
        return i
    }
}